<resources>
    <string name="app_name">Calculadora</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="clear">CLEAR</string>
    <string name="div">/</string>
    <string name="rest">-</string>
    <string name="multi">*</string>
    <string name="sum">+</string>
    <string name="edit1">Primer número</string>
    <string name="edit2">Segundo número</string>
    <string name="igual">=</string>
    <string name="show">SHOW</string>"
</resources>